--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -53,6 +53,14 @@
     padding: 5em;
 }
 
+.pl--0_5 {
+    padding-left: 0.5em;
+}
+
+.pl--1 {
+    padding-left: 1em;
+}
+
 .pl--4 {
     padding-left: 4em;
 }
