--- a/frontend/src/components/login/login.css
+++ b/frontend/src/components/login/login.css
@@ -1,7 +1,16 @@
-.grid {
+.login-container {
     height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column
 }
 
-.grid-column {
-    max-width: 50vw;
+.grid {
+    width: 50%;
+}
+
+.login-error {
+    width: 48%;
 }
